# cloudflare-dns

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.yaml
.github/workflows/: ci.yml  rust.yml
docs/adr/: 0001-use-iocraft-for-tui.md  0002-use-smol-for-async.md  0003-yaml-config-format.md  0004-module-structure.md  0005-async-reqwest.md  README.md  template.md
src/: app.rs  cloudflare.rs  colors.rs  config.rs  constants.rs  hooks.rs  lib.rs  main.rs  state.rs  status.rs  tasks.rs  utils.rs
src/api/: cache.rs  client.rs  error.rs  mod.rs  models.rs
src/components/: app_layout.rs  create_form.rs  delete_confirm.rs  form_field.rs  ip_selector.rs  mod.rs  record_list.rs  status_bar.rs
src/tasks/: delete_task.rs  fetch_task.rs  mod.rs  submit_task.rs
src/ui/: app.rs  colors.rs  constants.rs  hooks.rs  mod.rs  state.rs  status.rs  theme.rs
src/ui/components/: app_layout.rs  create_form.rs  delete_confirm.rs  form_field.rs  ip_selector.rs  record_list.rs  status_bar.rs
src/utils/: formatting.rs  mod.rs
tests/: api_integration.rs  config_integration.rs  data_flow.rs
