[package]
name = "cloudflaredns"
version = "0.1.1"
edition = "2024"
description = "A TUI for managing Cloudflare DNS records programmatically"
authors = ["ronanbrett"]
license = "MIT"
repository = "https://github.com/ronanbrett/cloudflare-dns"

[dependencies]
iocraft = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
crossterm = "0.28"
smol = "2"
dirs = "5"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
serial_test = "3"
